# Multi_LiCa

./: .gitignore  .gitmodules  Dockerfile  LICENSE.md  README.md  package.xml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
config/: demo.yaml  params.yaml
docker/: build_docker.sh  run_docker.sh
evaluation/: config.yaml  evaluation.py  evaluation_rel.py
launch/: calibration.launch.py
multi_lidar_calibrator/: multi_lidar_calibrator.py
multi_lidar_calibrator/calibration/: Calibration.py  Geometry.py  Lidar.py  points_horizontal.pcd
