<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_lidar_calibrator</name>
  <version>0.0.1</version>
  <description>Multi - LiDAR-to-LiDAR calibration framework for ROS 2 and non-ROS applications</description>
  <maintainer email="ge65wex@mytum.de">Andrii Chumak</maintainer>
  <maintainer email="dominik.kulmer@tum.de">Dominik Kulmer</maintainer>
  <license>LGPL-3.0 license</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
